--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+/* Configuração pata Tablet */
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     body {
@@ -8,6 +9,7 @@
 
     section#login {
         width: 80vw;
+        height: 320px;
     }
 
     section#login>div#imagem {
@@ -22,14 +24,16 @@
     }
 }
 
-@media screen and (min-width: 992px) {
 
+/* Configuração pata TV */
+@media screen and (min-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 950px;
+        height: 370px;
     }
 
     section#login>div#imagem {
@@ -49,5 +53,6 @@
 
     div#formulario> p {
         font-size: 1.2em;
+        margin: 10px 0px;
     }
 }
